# q-fi

./: .gitignore  README.md
Pump-and-Dump/: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  build.sh  config.py  pyproject.toml  test.py
Pump-and-Dump/examples/: basic_usage.py
Pump-and-Dump/python/: data_ingestion.py  main.py  visualization.py
Pump-and-Dump/src/: lib.rs
